<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="app_name">Muzik</string>
  <string name="albumDetails_disc">Disc %s</string>
  <string name="albumDetails_title">Album Details</string>
  <string name="albums_byArtist_subtitle">by %s</string>
  <string name="albums_showAllSongs">Show all songs</string>
  <string name="albums_title">Albums</string>
  <string name="artistDetails_title">Artist Details</string>
  <string name="artists_item_subtitle">%1$s, %2$s</string>
  <string name="artists_numberOfAlbums_one" tools:ignore="PluralsCandidate">%d album</string>
  <string name="artists_numberOfAlbums_other" tools:ignore="PluralsCandidate">%d albums</string>
  <string name="artists_numberOfSongs_one" tools:ignore="PluralsCandidate">%d song</string>
  <string name="artists_numberOfSongs_other" tools:ignore="PluralsCandidate">%d songs</string>
  <string name="artists_title">Artists</string>
  <string name="contentDescription_artistPicture">A picture of the artist</string>
  <string name="contentDescription_coverArt">Cover Art</string>
  <string name="contentDescription_discNumber">Disc Number</string>
  <string name="contentDescription_missingPermission">Permission to access storage</string>
  <string name="dashboard_title">Dashboard</string>
  <string name="dateAdded_new">New</string>
  <string name="dateAdded_old">Old</string>
  <string name="dateAdded_recent">Recent</string>
  <string name="error_outOfMemory">An Out of Memory error occurred. The song might be too big.</string>
  <string name="error_renderer">An error occurred while playing the song. The song might be corrupted.</string>
  <string name="error_source">An error occurred while loading the song. Probably an unsupported format.</string>
  <string name="error_unexpected">An unexpected error occurred.</string>
  <string name="library_grantAccessToSdCard">Grant Access to storage</string>
  <string name="library_readExternalStorage_rationale">The app needs your permission to access your music collection. Please grant access by clicking on the button below, then answering \'Grant\'.</string>
  <string name="library_title">Library</string>
  <string name="mediaControl_next">Next</string>
  <string name="mediaControl_pause">Pause</string>
  <string name="mediaControl_play">Play</string>
  <string name="mediaControl_playPause">Play/Pause</string>
  <string name="mediaControl_previous">Previous</string>
  <string name="mediaControl_shuffleAll">Shuffle all</string>
  <string name="notification_nowPlaying">Now Playing</string>
  <string name="notification_nowPlaying_description">Shows the currently playing song in Muzik.</string>
  <string name="player_noSongLoaded">No song loaded.</string>
  <string name="player_repeatAll">Repeating all songs.</string>
  <string name="player_repeatDisabled">Repeat disabled.</string>
  <string name="player_repeatOne">Repeating one song.</string>
  <string name="player_shuffleDisabled">Shuffle disabled.</string>
  <string name="player_shuffleEnabled">Shuffle enabled.</string>
  <string name="player_title">Player</string>
  <string name="player_toggleRepeat">Toggle Repeat</string>
  <string name="player_toggleShuffle">Toggle Shuffle</string>
  <string name="playlist_allSongs">All Songs</string>
  <string name="playlist_title">Playlist</string>
  <string name="search_title">Search</string>
  <string name="songs_fromAlbum_subtitle">from %s</string>
  <string name="songs_noTitle">No Title</string>
  <string name="songs_title">Songs</string>
  <string name="songs_unknownAlbum">Unknown Album</string>
  <string name="songs_unknownArtist">Unknown Artist</string>
  <string name="sortBy">Sort By</string>
  <string name="sortBy_artist">Sort by Artist</string>
  <string name="sortBy_dateAdded">Sort By Date Added</string>
  <string name="sortBy_title">Sort by Title</string>
</resources>
