<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:showIn="@layout/activity_main">

  <androidx.constraintlayout.widget.Group
    android:id="@+id/groupPermissionHint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:constraint_referenced_ids="imgSdCard,lblPermissionHint,btnRequestPermission"
    tools:visibility="visible" />

  <ImageView
    android:id="@+id/imgSdCard"
    android:layout_width="@android:dimen/notification_large_icon_width"
    android:layout_height="@android:dimen/notification_large_icon_height"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/contentDescription_missingPermission"
    android:tint="@android:color/white"
    app:layout_constraintBottom_toTopOf="@+id/lblPermissionHint"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed"
    app:srcCompat="@drawable/ic_sd_card" />

  <TextView
    android:id="@+id/lblPermissionHint"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:layout_marginLeft="48dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="48dp"
    android:layout_marginRight="48dp"
    android:singleLine="false"
    android:text="@string/library_readExternalStorage_rationale"
    android:textAlignment="center"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@+id/btnRequestPermission"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imgSdCard" />

  <Button
    android:id="@+id/btnRequestPermission"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:onClick="requestStoragePermission"
    android:text="@string/library_grantAccessToSdCard"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lblPermissionHint" />

</androidx.constraintlayout.widget.ConstraintLayout>