<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="hu.mrolcsi.muzik.splash.SplashViewModel" />

    <variable
      name="theme"
      type="androidx.lifecycle.LiveData&lt;hu.mrolcsi.muzik.theme.Theme&gt;" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    tools:showIn="@layout/fragment_splash">

    <ImageView
      android:id="@+id/imgSdCard"
      android:layout_width="@android:dimen/notification_large_icon_width"
      android:layout_height="@android:dimen/notification_large_icon_height"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:contentDescription="@string/contentDescription_missingPermission"
      android:tint="@{theme.primaryForegroundColor}"
      app:layout_constraintBottom_toTopOf="@+id/lblPermissionHint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      app:srcCompat="@drawable/ic_sd_card"
      app:visibility="@{viewModel.permissionRationaleVisible}"
      tools:visibility="visible" />

    <TextView
      android:id="@+id/lblPermissionHint"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="48dp"
      android:singleLine="false"
      android:text="@string/library_readExternalStorage_rationale"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@{theme.primaryForegroundColor}"
      android:textSize="18sp"
      app:layout_constraintBottom_toTopOf="@+id/btnRequestPermission"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imgSdCard"
      app:visibility="@{viewModel.permissionRationaleVisible}"
      tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnRequestPermission"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:backgroundTint="@{theme.secondaryBackgroundColor}"
      android:onClick="@{() -> viewModel.requestPermission()}"
      android:text="@string/library_grantAccessToSdCard"
      android:textColor="@{theme.secondaryForegroundColor}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lblPermissionHint"
      app:visibility="@{viewModel.permissionRationaleVisible}"
      tools:visibility="visible" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>