<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="hu.mrolcsi.muzik.player.PlayerViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/playerRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".player.PlayerFragment">

    <ImageView
      android:id="@+id/imgCoverArt"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:contentDescription="@string/contentDescription_coverArt"
      android:scaleType="centerCrop"
      android:transitionName="coverArt"
      app:error="@{@drawable/placeholder_cover_art}"
      app:layout_constraintDimensionRatio="1:1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@drawable/placeholder_cover_art" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvQueue"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:alpha="0.0"
      app:layout_constraintBottom_toTopOf="@+id/sbSongProgress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:listitem="@layout/list_item_queue" />

    <!-- Make sure Toolbar is above the Cover Art -->

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/playerToolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:elevation="@dimen/action_bar_elevation"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:elevation="@dimen/action_bar_elevation"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:menu="@menu/menu_player"
      app:navigationIcon="?attr/homeAsUpIndicator" />

    <SeekBar
      android:id="@+id/sbSongProgress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:enabled="false"
      android:max="@{viewModel.duration}"
      android:onProgressChanged="@{(seekBar, progress, fromUser) -> viewModel.onSeek(progress, fromUser)}"
      android:onStopTrackingTouch="@{() -> viewModel.onStopTrackingTouch()}"
      android:onStartTrackingTouch="@{() -> viewModel.onStartTrackingTouch()}"
      android:progress="@{viewModel.elapsedTime}"
      app:layout_constraintBottom_toTopOf="@+id/btnPlayPause"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

    <TextView
      android:id="@+id/tvElapsedTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:alpha="0.7"
      android:text="@{viewModel.elapsedTimeText}"
      app:layout_constraintStart_toStartOf="@+id/sbSongProgress"
      app:layout_constraintTop_toBottomOf="@+id/sbSongProgress"
      tools:text="01:23" />

    <TextView
      android:id="@+id/tvRemainingTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:alpha="0.7"
      android:text="@{viewModel.remainingTimeText}"
      app:layout_constraintEnd_toEndOf="@+id/sbSongProgress"
      app:layout_constraintTop_toBottomOf="@+id/sbSongProgress"
      tools:text="-02:11" />

    <TextView
      android:id="@+id/tvSeekProgress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#990e0e0e"
      android:elevation="@dimen/bottom_navigation_elevation"
      android:minWidth="120dp"
      android:padding="8dp"
      android:text="@{viewModel.seekProgressText}"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="?android:attr/textColorPrimary"
      android:typeface="monospace"
      android:visibility="@{viewModel.seekProgressVisible}"
      app:elevation="@dimen/bottom_navigation_elevation"
      app:layout_constraintBottom_toBottomOf="@+id/imgCoverArt"
      app:layout_constraintEnd_toEndOf="@+id/imgCoverArt"
      app:layout_constraintStart_toStartOf="@id/imgCoverArt"
      app:layout_constraintTop_toTopOf="@+id/imgCoverArt"
      tools:text="01:24"
      tools:visibility="visible" />

    <ImageButton
      android:id="@+id/btnShuffle"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_marginStart="16dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/player_toggleShuffle"
      android:onClick="@{() -> viewModel.onShuffleClicked()}"
      android:src="@{viewModel.shuffleDrawableRes}"
      app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
      tools:src="@drawable/ic_shuffle_none"
      tools:tint="@android:color/white" />

    <ImageButton
      android:id="@+id/btnPrevious"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/media_button_background"
      android:contentDescription="@string/mediaControl_previous"
      android:elevation="@dimen/button_elevation"
      android:enabled="@{viewModel.isPreviousEnabled}"
      android:onTouch="@{viewModel.previousTouchListener}"
      android:scaleType="fitCenter"
      app:elevation="@dimen/button_elevation"
      app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
      app:layout_constraintEnd_toStartOf="@+id/btnPlayPause"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toEndOf="@+id/btnShuffle"
      app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
      app:srcCompat="@android:drawable/ic_media_previous"
      tools:visibility="visible" />

    <ImageButton
      android:id="@+id/btnPlayPause"
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:layout_marginBottom="32dp"
      android:background="@drawable/media_button_background"
      android:contentDescription="@string/mediaControl_playPause"
      android:elevation="@dimen/button_elevation"
      android:enabled="@{viewModel.isPlayPauseEnabled}"
      android:onClick="@{() -> viewModel.onPlayPauseClicked()}"
      android:scaleType="fitCenter"
      android:src="@{viewModel.isPlaying ? @android:drawable/ic_media_pause : @android:drawable/ic_media_play}"
      app:elevation="@dimen/button_elevation"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btnNext"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btnPrevious"
      tools:src="@android:drawable/ic_media_play" />

    <ImageButton
      android:id="@+id/btnNext"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/media_button_background"
      android:contentDescription="@string/mediaControl_next"
      android:elevation="@dimen/button_elevation"
      android:enabled="@{viewModel.isNextEnabled}"
      android:onTouch="@{viewModel.nextTouchListener}"
      android:scaleType="fitCenter"
      app:elevation="@dimen/button_elevation"
      app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
      app:layout_constraintEnd_toStartOf="@+id/btnRepeat"
      app:layout_constraintStart_toEndOf="@+id/btnPlayPause"
      app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
      app:srcCompat="@android:drawable/ic_media_next"
      tools:visibility="visible" />

    <ImageButton
      android:id="@+id/btnRepeat"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:layout_marginEnd="16dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/player_toggleRepeat"
      android:onClick="@{() -> viewModel.onRepeatClicked()}"
      android:src="@{viewModel.repeatDrawableRes}"
      app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
      tools:src="@drawable/ic_repeat_none"
      tools:tint="@android:color/white" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>