<?xml version="1.0" encoding="utf-8"?>
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/library_navigation"
  app:startDestination="@id/navigation_artists">

  <action
    android:id="@+id/action_global_to_artists"
    app:destination="@id/navigation_artists"
    app:enterAnim="@android:anim/fade_in"
    app:exitAnim="@android:anim/fade_out"
    app:popEnterAnim="@android:anim/fade_in"
    app:popExitAnim="@android:anim/fade_out"
    app:popUpTo="@+id/library_navigation"/>

  <action
    android:id="@+id/action_global_to_albums"
    app:destination="@id/navigation_albums"
    app:enterAnim="@android:anim/fade_in"
    app:exitAnim="@android:anim/fade_out"
    app:popEnterAnim="@android:anim/fade_in"
    app:popExitAnim="@android:anim/fade_out"
    app:popUpTo="@+id/library_navigation"
    app:popUpToInclusive="true"/>

  <action
    android:id="@+id/action_global_to_songs"
    app:destination="@id/navigation_songs"
    app:enterAnim="@android:anim/fade_in"
    app:exitAnim="@android:anim/fade_out"
    app:popEnterAnim="@android:anim/fade_in"
    app:popExitAnim="@android:anim/fade_out"
    app:popUpTo="@+id/library_navigation"
    app:popUpToInclusive="true"/>

  <fragment android:id="@+id/navigation_artists"
    android:label="@string/artists_title"
    android:name="hu.mrolcsi.muzik.library.artists.ArtistsFragment"
    tools:layout="@layout/fragment_artists">

    <action android:id="@+id/action_artists_to_albums"
      app:destination="@id/navigation_albumsByArtist"
      app:enterAnim="@anim/slide_in_left"
      app:exitAnim="@anim/slide_out_left"
      app:popEnterAnim="@anim/slide_in_right"
      app:popExitAnim="@anim/slide_out_right"
      app:popUpTo="@+id/navigation_artists"/>

  </fragment>

  <fragment android:id="@+id/navigation_albums"
    android:label="@string/albums_title"
    android:name="hu.mrolcsi.muzik.library.albums.AlbumsFragment"
    tools:layout="@layout/fragment_albums">

    <action android:id="@+id/action_albums_to_songs"
      app:destination="@id/navigation_songsFromAlbum"
      app:enterAnim="@anim/slide_in_left"
      app:exitAnim="@anim/slide_out_left"
      app:popEnterAnim="@anim/slide_in_right"
      app:popExitAnim="@anim/slide_out_right"
      app:popUpTo="@+id/navigation_albums"/>

  </fragment>

  <fragment android:id="@+id/navigation_albumsByArtist"
    android:label="@string/albums_title"
    android:name="hu.mrolcsi.muzik.library.albums.AlbumsFragment"
    tools:layout="@layout/fragment_albums">

    <argument android:name="artistKey"
      app:argType="string"
      app:nullable="true"/>
    <argument android:name="artistName"
      app:argType="string"
      app:nullable="true"/>
    <argument android:name="numberOfTracks"
      app:argType="integer"/>

    <action android:id="@+id/action_albums_to_songs"
      app:destination="@id/navigation_songsFromAlbum"
      app:enterAnim="@anim/slide_in_left"
      app:exitAnim="@anim/slide_out_left"
      app:popEnterAnim="@anim/slide_in_right"
      app:popExitAnim="@anim/slide_out_right"
      app:popUpTo="@id/navigation_albumsByArtist"/>

  </fragment>

  <fragment android:id="@+id/navigation_songs"
    android:label="@string/songs_title"
    android:name="hu.mrolcsi.muzik.library.songs.SongsFragment"
    tools:layout="@layout/fragment_songs">

  </fragment>

  <fragment android:id="@+id/navigation_songsFromAlbum"
    android:label="@string/songs_title"
    android:name="hu.mrolcsi.muzik.library.songs.SongsFragment"
    tools:layout="@layout/fragment_songs">

    <argument android:name="artistKey"
      app:argType="string"
      app:nullable="true"/>
    <argument android:name="artistName"
      app:argType="string"
      app:nullable="true"/>
    <argument android:name="albumKey"
      app:argType="string"
      app:nullable="true"/>
    <argument android:name="albumTitle"
      app:argType="string"
      app:nullable="true"/>

  </fragment>

</navigation>