<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="hu.mrolcsi.muzik.ui.miniPlayer.MiniPlayerViewModel" />

    <variable
      name="theme"
      type="androidx.lifecycle.LiveData&lt;hu.mrolcsi.muzik.data.model.theme.Theme&gt;" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@{theme.backgroundColor}"
    android:clickable="true"
    android:elevation="@dimen/bottom_navigation_elevation"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:foregroundTint="@{theme.foregroundColor}"
    app:elevation="@dimen/bottom_navigation_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/imgCoverArt"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/notification_nowPlaying_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/placeholder_cover_art" />

      <ProgressBar
        android:id="@+id/pbSongProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:elevation="0dp"
        android:max="@{viewModel.duration}"
        android:progress="@{viewModel.elapsedTime}"
        android:progressBackgroundTint="@{theme.foregroundColor}"
        android:progressTint="@{theme.foregroundColor}"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:max="10"
        tools:progress="4" />

      <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@{viewModel.songTitle}"
        android:textColor="@{theme.foregroundColor}"
        android:textStyle="bold"
        app:enableMarquee="@{true}"
        app:layout_constraintBottom_toTopOf="@+id/tvArtist"
        app:layout_constraintEnd_toStartOf="@+id/btnPrevious"
        app:layout_constraintStart_toEndOf="@+id/imgCoverArt"
        app:layout_constraintTop_toBottomOf="@+id/pbSongProgress"
        app:marqueeDelay="@{@integer/preferredMarqueeDelay}"
        tools:text="Title" />

      <TextView
        android:id="@+id/tvArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.8"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@{viewModel.songArtist}"
        android:textColor="@{theme.foregroundColor}"
        app:enableMarquee="@{true}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPrevious"
        app:layout_constraintStart_toEndOf="@+id/imgCoverArt"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:marqueeDelay="@{@integer/preferredMarqueeDelay}"
        tools:text="Artist" />

      <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/media_button_background"
        android:backgroundTint="@{theme.foregroundColor}"
        android:contentDescription="@string/mediaControl_previous"
        android:enabled="@{viewModel.previousEnabled}"
        android:onClick="@{() -> viewModel.onPreviousClick()}"
        android:src="@android:drawable/ic_media_previous"
        android:tint="@{theme.backgroundColor}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayPause"
        app:layout_constraintTop_toBottomOf="@+id/pbSongProgress"
        app:rippleColor="@{theme.backgroundColor}" />

      <ImageButton
        android:id="@+id/btnPlayPause"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/media_button_background"
        android:backgroundTint="@{theme.foregroundColor}"
        android:contentDescription="@string/mediaControl_playPause"
        android:enabled="@{viewModel.playPauseEnabled}"
        android:onClick="@{() -> viewModel.onPlayPauseClick()}"
        android:src="@{viewModel.isPlaying ? @android:drawable/ic_media_pause : @android:drawable/ic_media_play}"
        android:tint="@{theme.backgroundColor}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/pbSongProgress"
        app:rippleColor="@{theme.backgroundColor}"
        tools:src="@android:drawable/ic_media_play" />

      <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/media_button_background"
        android:backgroundTint="@{theme.foregroundColor}"
        android:contentDescription="@string/mediaControl_next"
        android:enabled="@{viewModel.nextEnabled}"
        android:onClick="@{() -> viewModel.onNextClick()}"
        android:src="@android:drawable/ic_media_next"
        android:tint="@{theme.backgroundColor}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbSongProgress"
        app:rippleColor="@{theme.backgroundColor}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </FrameLayout>

</layout>